Add 3 new routines to Maths category
The routines are:
* PowN
* PowNZN
* PowNZZ

Add compile result for all three for Delphi XE, 11 & 12.
Add test info showing advanced / unit tests

Also updated Pow function entry to cross reference these new routines.

Add test info for PowNxx functions

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1178,6 +1178,7 @@ FPC=Y
 
 [Pow]
 DescEx="<p>Raises integer value <var>Base</var> to non-negative integer power <var>Exponent</var> and returns the result.</p>"
+SeeAlso=PowN,PowNZN,PowNZZ
 Snip=561.dat
 Delphi2=N
 Delphi3=N
@@ -1196,6 +1197,44 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 FPC=Y
+
+[PowN]
+DescEx="<p>IEEE compliant function that raises real number <var>X</var> to the power <var>N</var>.</p>"
+Extra="<p>See IEEE standard 754-2008 for Floating-Point Arithmetic, page 44.</p>"
+Units=SysUtils,Math
+SeeAlso=Pow,PowNZN,PowNZZ
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=633.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[PowNZN]
+DescEx="<p>Raises integer <var>X</var> to non-negative integer power <var>N</var>.</p>"
+Extra="<p>Returns an <var>integer</var> value because the power <var>N</var> is non-negative which guarantees that the result is integral.</p><p>Based on IEEE standard 754-2008 for Floating-Point Arithmetic, page 44, but which restricts <var>X</var> to an integer and <var>N</var> to a non-negative integer.</p>"
+SeeAlso=Pow,PowN,PowNZZ
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=634.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[PowNZZ]
+DescEx="<p>Raises integer <var>X</var> to integer power <var>N</var>.</p>"
+Extra="<p>Returns an <var>Extended</var> value since the result is not an integer when power <var>N</var> is negative.</p><p>Based on IEEE standard 754-2008 for Floating-Point Arithmetic, page 44, but which restricts <var>X</var> to an integer.</p>"
+Units=SysUtils,
+SeeAlso=Pow,PowN,PowNZN
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=635.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
 
 [ResizeRect_A]
 DisplayName="ResizeRect (TSize overload)"
