Fix syntax errors in category .ini files
Syntax errors fixed in maths.ini & hex.ini.

--- a/collection/hex.ini
+++ b/collection/hex.ini
@@ -38,7 +38,8 @@ DescEx="<p>Returns a hexadecimal representation of the bytes in the given buffer
 SeeAlso=BytesToHex,ByteToHex,LongWordToHex,QuadWordToHex,WordToHex
 TestInfo=advanced
 TestInfo=advanced
-AdvancedTest.Level=unit-testsgithub.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=312.dat
 Delphi2=Y
 Delphi3=Y
