--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -2,7 +2,7 @@
 #
 # Mathematics category file
 #
-# This file is licensed under the MIT license, copyright © 2020 Peter Johnson,
+# This file is licensed under the MIT license, copyright © 2024 Peter Johnson,
 # https://gravatar.com/delphidabbler
 
 [AllDigitsDifferent]
@@ -83,8 +83,8 @@ Extra="<p>Based on code suggested by Don Rowlett.</p>"
 Units=Math
 SeeAlso=DigitCount,DigitCountR
 TestInfo=advanced
-TestInfo=advanced
-AdvancedTest.Level=unit-testsgithub.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=204.dat
 Delphi2=N
 Delphi3=N
@@ -1107,7 +1107,7 @@ DisplayName="MinOfArray (Integer overload)"
 DescEx="<p>Returns the minimum value contained in the given array of integer values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Integer,MinOfArray_Double,MinOfArray_Extended,MinOfArray_Int64,MinOfArray_Single,Mid_Integer,MinMidMax_Integer
 TestInfo=advanced
-AdvancedTest.Level=unit-testsfArray (Single overload)"
+AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=436.dat
 Delphi2=N
