Add 14 new routines to Maths category
The routines are:
* ArraySum overloads
* SumOfLogs overloads

In both cases overloaded parameters are open arrays of Cardinal, Double,
Extended, Int64, Integer, Single &  UInt64.

Added compile results for all routines for Delphi XE, 11 & 12.
Added test info showing advanced / unit tests

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -51,6 +51,93 @@ DelphiXE4=Y
 Delphi10S=Y
 FPC=Y
 
+[ArraySum_Cardinal]
+DisplayName="ArraySum (Cardinal overload)"
+DescEx="<p>Returns the sum of all <var>Cardinal</var> elements of array <var>A</var>.</p><p><mono>0</mono> is returned if the array is empty.</p>"
+SeeAlso=ArraySum_Double,ArraySum_Extended,ArraySum_Int64,ArraySum_Integer,ArraySum_Single,ArraySum_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=636.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[ArraySum_Double]
+DisplayName="ArraySum (Double overload)"
+DescEx="<p>Returns the sum of all <var>Double</var> floating point elements of array <var>A</var>.</p><p><mono>0.0</mono> is returned if the array is empty.</p>"
+Extra="<p>This routine duplicates the functionality of Delphi&apos;s <var>Math.SUM</var> routine, but circumvents the access violation caused by <var>Math.SUM</var> in some circumstances.</p>"
+SeeAlso=ArraySum_Cardinal,ArraySum_Extended,ArraySum_Int64,ArraySum_Integer,ArraySum_Single,ArraySum_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=637.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[ArraySum_Extended]
+DisplayName="ArraySum (Extended overload)"
+DescEx="<p>Returns the sum of all <var>Extended</var> floating point elements of array <var>A</var>.</p><p><mono>0.0</mono> is returned if the array is empty.</p>"
+Extra="<p>This routine duplicates the functionality of Delphi&apos;s <var>Math.SUM</var> routine, but circumvents the access violation caused by <var>Math.SUM</var> in some circumstances.</p>"
+SeeAlso=ArraySum_Cardinal,ArraySum_Double,ArraySum_Int64,ArraySum_Integer,ArraySum_Single,ArraySum_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=638.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[ArraySum_Int64]
+DisplayName="ArraySum (Int64 overload)"
+DescEx="<p>Returns the sum of all <var>Int64</var> elements of array <var>A</var>.</p><p><mono>0</mono> is returned if the array is empty.</p>"
+SeeAlso=ArraySum_Cardinal,ArraySum_Double,ArraySum_Extended,ArraySum_Integer,ArraySum_Single,ArraySum_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=639.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[ArraySum_Integer]
+DisplayName="ArraySum (Integer overload)"
+DescEx="<p>Returns the sum of all <var>Integer</var> elements of array <var>A</var>.</p><p><mono>0</mono> is returned if the array is empty.</p>"
+SeeAlso=ArraySum_Cardinal,ArraySum_Double,ArraySum_Extended,ArraySum_Int64,ArraySum_Single,ArraySum_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=640.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[ArraySum_Single]
+DisplayName="ArraySum (Single overload)"
+DescEx="<p>Returns the sum of all <var>Single</var> floating point elements of array <var>A</var>.</p><p><mono>0.0</mono> is returned if the array is empty.</p>"
+Extra="<p>This routine duplicates the functionality of Delphi&apos;s <var>Math.SUM</var> routine, but circumvents the access violation caused by <var>Math.SUM</var> in some circumstances.</p>"
+SeeAlso=ArraySum_Cardinal,ArraySum_Double,ArraySum_Extended,ArraySum_Int64,ArraySum_Integer,ArraySum_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=641.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[ArraySum_UInt64]
+DisplayName="ArraySum (UInt64 overload)"
+DescEx="<p>Returns the sum of all <var>UInt64</var> elements of array <var>A</var>.</p><p><mono>0</mono> is returned if the array is empty.</p>"
+SeeAlso=ArraySum_Cardinal,ArraySum_Double,ArraySum_Extended,ArraySum_Int64,ArraySum_Integer,ArraySum_Single
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=642.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
 [DigitCount]
 DescEx="<p>Counts the number of digits in the given integer.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
@@ -412,6 +499,97 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 FPC=Y
+
+[SumOfLogs_Cardinal]
+DisplayName=SumOfLogs (Cardinal overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>Cardinal</var> element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Double,SumOfLogs_Extended,SumOfLogs_Int64,SumOfLogs_Integer,SumOfLogs_Single,SumOfLogs_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Units=SysUtils
+Snip=643.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[SumOfLogs_Double]
+DisplayName=SumOfLogs (Double overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>Double</var> floating point element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0.0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Cardinal,SumOfLogs_Extended,SumOfLogs_Int64,SumOfLogs_Integer,SumOfLogs_Single,SumOfLogs_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Units=SysUtils,Math
+Snip=647.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[SumOfLogs_Extended]
+DisplayName=SumOfLogs (Extended overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>Extended</var> floating point element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0.0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Cardinal,SumOfLogs_Double,SumOfLogs_Int64,SumOfLogs_Integer,SumOfLogs_Single,SumOfLogs_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Units=SysUtils,Math
+Snip=648.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[SumOfLogs_Int64]
+DisplayName=SumOfLogs (Int64 overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>Int64</var> element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Cardinal,SumOfLogs_Double,SumOfLogs_Extended,SumOfLogs_Integer,SumOfLogs_Single,SumOfLogs_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Units=SysUtils
+Snip=644.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[SumOfLogs_Integer]
+DisplayName=SumOfLogs (Integer overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>Integer</var> element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Cardinal,SumOfLogs_Double,SumOfLogs_Extended,SumOfLogs_Int64,SumOfLogs_Single,SumOfLogs_UInt64
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Units=SysUtils
+Snip=645.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[SumOfLogs_Single]
+DisplayName=SumOfLogs (Single overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>Single</var> floating point element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0.0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Cardinal,SumOfLogs_Double,SumOfLogs_Extended,SumOfLogs_Int64,SumOfLogs_Integer,SumOfLogs_UInt64
+Units=SysUtils,Math
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=649.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
+
+[SumOfLogs_UInt64]
+DisplayName=SumOfLogs (UInt64 overload)
+DescEx="<p>Returns the sum of the natural logarithms of each <var>UInt64</var> element of array <var>A</var>.</p><p>All elements of <var>A</var> <strong>must</strong> be positive. An exception is raised otherwise.</p><p><mono>0</mono> is returned if <var>A</var> is empty.</p>"
+SeeAlso=SumOfLogs_Cardinal,SumOfLogs_Double,SumOfLogs_Extended,SumOfLogs_Int64,SumOfLogs_Integer,SumOfLogs_Single
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Units=SysUtils
+Snip=646.dat
+DelphiXE=Y
+Delphi11A=Y
+Delphi12A=Y
 
 [DecimalToFraction]
 DescEx="<p>Converts the given decimal to a fraction. The numerator and denominator are passed out as floating point numbers in <var>FractionNumerator</var> and <var>FractionDenominator</var> respectively.</p><p><var>AccuracyFactor</var> determines how accurate the conversion is to be.</p>"
