Fix errors in advanced testing keys
Erroneous and corrupt values of several AdvancedTest.Level keys in
maths.ini were corrected.

Invalid URLs in AdvancedTest.URL keys in data.ini and hex.ini were
corrected.

Fixes #29

--- a/collection/date.ini
+++ b/collection/date.ini
@@ -110,7 +110,7 @@ SeeAlso=DateMonth,DateMonthStart,DaysInMonth
 Depends=DaysInMonth
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
-AdvancedTest.URL="github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Date"
 Snip=441.dat
 Delphi2=Y
 Delphi3=Y
