--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1259,7 +1259,7 @@ DisplayName="MinOfArray (Int64 overload)"
 DescEx="<p>Returns the minimum value contained in the given array of 64 bit integer values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Int64,MinOfArray_Double,MinOfArray_Extended,MinOfArray_Integer,MinOfArray_Single,Mid_Int64,MinMidMax_Int64
 TestInfo=advanced
-AdvancedTest.Level=unit-testser]
+AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=435.dat
 Delphi2=N
@@ -1311,7 +1311,7 @@ DisplayName="MinOfArray (Single overload)"
 DescEx="<p>Returns the minimum value contained in the given array of single precision floating point values.</p><p>The array must not be empty.</p>"
 SeeAlso=MaxOfArray_Single,MinOfArray_Double,MinOfArray_Extended,MinOfArray_Int64,MinOfArray_Integer,Mid_Single,MinMidMax_Single
 TestInfo=advanced
-AdvancedTest.Level=unit-testsoStr,FractionToStrEx
+AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=437.dat
 Delphi2=N
@@ -1448,7 +1448,7 @@ DescEx="<p>Resizes rectangle <var>R</var> to the width and height given by <var>
 Units=Types
 SeeAlso=ResizeRect_A,StretchRect_A,StretchRect_B,ScaleRect,ZoomRatio_A,ZoomRatio_B,ZoomRatio_C
 TestInfo=advanced
-AdvancedTest.Level=unit-testsmber
+AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=419.dat
 Delphi2=N
@@ -1558,7 +1558,7 @@ DescEx="<p>Stretches rectangle <var>R</var> by the given scaling factors and ret
 Units=SysUtils,Types
 SeeAlso=StretchRect_B,ScaleRect,ResizeRect_A,ResizeRect_B,ZoomRatio_A,ZoomRatio_B,ZoomRatio_C
 TestInfo=advanced
-AdvancedTest.Level=unit
+AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=421.dat
 Delphi2=N
