--- a/collection/hex.ini
+++ b/collection/hex.ini
@@ -39,7 +39,7 @@ SeeAlso=BytesToHex,ByteToHex,LongWordToHex,QuadWordToHex,WordToHex
 TestInfo=advanced
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
-AdvancedTest.URL="github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Hex"
 Snip=312.dat
 Delphi2=Y
 Delphi3=Y
