Add 6 new routines to Maths category
Added Integer, Cardinal and Double overloads of each of the new
ArithMean and WeightedArithMean routines.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1681,3 +1681,77 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 FPC=Y
+
+[ArithMean_Double]
+DisplayName="ArithMean (Double overload)"
+DescEx="<p>Returns the arithmetic mean of an array of <var>Double</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
+Units=SysUtils
+SeeAlso=ArithMean_Integer,ArithMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=650.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[ArithMean_Integer]
+DisplayName="ArithMean (Integer overload)"
+DescEx="<p>Returns the arithmetic mean of an array of <var>Integer</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
+Units=SysUtils
+SeeAlso=ArithMean_Double,ArithMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=651.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[ArithMean_Cardinal]
+DisplayName="ArithMean (Cardinal overload)"
+DescEx="<p>Returns the arithmetic mean of an array of <var>Cardinal</var> values.</p><p><var>EArgumentException</var> is raised if the array is empty.</p>"
+Units=SysUtils
+SeeAlso=ArithMean_Double,ArithMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=652.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedArithMean_Double]
+DisplayName="WeightedArithMean (Double overload)"
+DescEx="<p>Calculates and returns the weighted average of the <var>Double</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
+Units=SysUtils,Math
+SeeAlso=ArithMean_Double,WeightedArithMean_Integer,WeightedArithMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=653.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedArithMean_Integer]
+DisplayName="WeightedArithMean (Integer overload)"
+DescEx="<p>Calculates and returns the weighted average of the <var>Integer</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
+Units=
+Depends=WeightedArithMean_Double
+SeeAlso=ArithMean_Integer,WeightedArithMean_Double,WeightedArithMean_Cardinal
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=654.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[WeightedArithMean_Cardinal]
+DisplayName="WeightedArithMean (Cardinal overload)"
+DescEx="<p>Calculates and returns the weighted average of the <var>Cardinal</var> elements of array <var>Values</var> where each element is weighted by the corresponding element in the array <var>Weights</var>.</p><p>An <var>EArgumentException</var> exception is raised if any of the following pre-conditions are not met: <var>Values</var> must be non-empty; <var>Values</var> &amp; <var>Weights</var> must have the same number of elements; all elements of <var>Weights</var> must be non-negative, with at least one element being non-zero.</p>"
+Units=
+Depends=WeightedArithMean_Double
+SeeAlso=ArithMean_Cardinal,WeightedArithMean_Double,WeightedArithMean_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=655.dat
+DelphiXE=Y
+Delphi12A=Y
