Add 3 new routines to Maths category
Added new DigitSumBase, DigitCountBase & DigitsOf routines to the
Mathematics category.

Updated maths.ini with meta data of new routines & updated SeeAlso
fields of some other routines that now cross reference new routines.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -141,7 +141,7 @@ Delphi12A=Y
 [DigitCount]
 DescEx="<p>Counts the number of digits in the given integer.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
-SeeAlso=DigitCount2,DigitCountR
+SeeAlso=DigitCount2,DigitCountR,DigitCountBase
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -168,7 +168,7 @@ FPC=Y
 DescEx="<p>Counts the number of digits in the given integer.</p>"
 Extra="<p>Based on code suggested by Don Rowlett.</p>"
 Units=Math
-SeeAlso=DigitCount,DigitCountR
+SeeAlso=DigitCount,DigitCountR,DigitCountBase
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -194,7 +194,7 @@ FPC=Y
 [DigitCountR]
 DescEx="<p>Counts the number of digits in the given integer using recursion.</p>"
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
-SeeAlso=DigitCount,DigitCount2
+SeeAlso=DigitCount,DigitCount2,DigitCountBase
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -620,6 +620,7 @@ Extra="<p>Sums of digits of negative numbers are negative, for example <mono>Dig
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+SeeAlso=DigitSumBase
 Snip=418.dat
 Delphi2=N
 Delphi3=N
@@ -1753,5 +1754,46 @@ TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=655.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[DigitSumBase]
+DisplayName="DigitSumBase"
+DescEx="<p>Calculates the sum of all the digits of integer <var>N</var> when epxressed in base <var>Base</var>. The returned value has the same sign as <var>N</var>.</p><p>Bases up to 255 are supported. If <var>Base</var> &lt; 2 then an <var>EArgumentException</var> exception is raised.</p>"
+Kind=routine
+Units=SysUtils,Math
+SeeAlso=DigitSum
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=657.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[DigitCountBase]
+DisplayName="DigitCountBase"
+DescEx="<p>Returns the number of digits in integer <var>N</var> when expressed in base <var>Base</var>.</p><p>Bases up to 255 are supported. If <var>Base</var> &lt; 2 then an <var>EArgumentException</var> exception is raised.</p>"
+Extra="<p>The number of digits of an integer <em>n</em> &gt; 0 in base <em>b</em> &gt;= 2 can be expressed mathematically as:</p><p><mono>floor(log<em>b</em>(<em>n</em>)) + 1</mono></p><p>Unfortunately testing a Pascal implementation of this formula failed on some tests, e.g. <mono>DigitCount($FFFFFFFF,16)</mono>. This was probably due to floating point rounding errors. Therefore this implementation using only integer operations was used instead.</p>"
+Kind=routine
+Units=SysUtils
+SeeAlso=DigitCount,DigitCount2,DigitCountR
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=658.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[DigitsOf]
+DisplayName=DigitsOf
+DescEx="<p>Returns an array containing the digits of integer <var>N</var> when expressed in base <var>Base</var>. The array is ordered with the least significant digit first.</p><p>The returned array contains the <em>decimal value</em> of the digit, for e.g. the hex symbol <em>F</em> is represented by an array element containing the value <em>15</em>.</p><p>Bases up to 255 are supported. If <var>Base</var> &lt; 2 then an <var>EArgumentException</var> exception is raised.</p>"
+Extra="<p>Examples:</p><p>1. <mono>DigitsOf($FACE,16)</mono> returns <mono>[15,10,12,14]</mono></p><p>2. <mono>DigitsOf(12,8)</mono> returns <mono>[1,4]</mono></p><p>3. <mono>DigitsOf(6,2)</mono> returns <mono>[1,1,0]</mono></p><p>4. <mono>DigitsOf(6,10)</mono> returns <mono>[6]</mono></p><p>5. <mono>DigitsOf(0,8)</mono> returns <mono>[0]</mono></p>"
+Kind=routine
+Units=SysUtils
+Depends=DigitCountBase
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=659.dat
 DelphiXE=Y
 Delphi12A=Y
