Add overflow checking to PowNZN function
Updated PowNZN function in Mathematics category to check for integer
overflow and to raise an EOverflow exception when detected.

This change was required to trap errors when implementing DigitPowerSum, which
will call PowNZN.

Updated maths.ini re requirement for SysUtils unit in PowNZN and to updated
description to reference the newly added exception.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1391,8 +1391,9 @@ Delphi11A=Y
 Delphi12A=Y
 
 [PowNZN]
-DescEx="<p>Raises integer <var>X</var> to non-negative integer power <var>N</var>.</p>"
+DescEx="<p>Raises integer <var>X</var> to non-negative integer power <var>N</var>.</p><p>If the result is too large to be represented as an <var>Int64</var> value then an <var>EOverflow</var> exception is raised.</p>"
 Extra="<p>Returns an <var>integer</var> value because the power <var>N</var> is non-negative which guarantees that the result is integral.</p><p>Based on IEEE standard 754-2008 for Floating-Point Arithmetic, page 44, but which restricts <var>X</var> to an integer and <var>N</var> to a non-negative integer.</p>"
+Units=SysUtils
 SeeAlso=Pow,PowN,PowNZZ
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
