Add new DigitPowerSum routine to Maths category
Added new source code file.

Updated maths.ini with meta data for DigitPowerSum. Also updated SeeAlso
fields of related DigitSum and DigitSumBase routines.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -620,7 +620,7 @@ Extra="<p>Sums of digits of negative numbers are negative, for example <mono>Dig
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
-SeeAlso=DigitSumBase
+SeeAlso=DigitSumBase,DigitPowerSum
 Snip=418.dat
 Delphi2=N
 Delphi3=N
@@ -1763,7 +1763,7 @@ DisplayName="DigitSumBase"
 DescEx="<p>Calculates the sum of all the digits of integer <var>N</var> when epxressed in base <var>Base</var>. The returned value has the same sign as <var>N</var>.</p><p>Bases up to 255 are supported. If <var>Base</var> &lt; 2 then an <var>EArgumentException</var> exception is raised.</p>"
 Kind=routine
 Units=SysUtils,Math
-SeeAlso=DigitSum
+SeeAlso=DigitSum,DigitPowerSum
 TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
@@ -1796,5 +1796,19 @@ TestInfo=advanced
 AdvancedTest.Level=unit-tests
 AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
 Snip=659.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[DigitPowerSum]
+DisplayName=DigitPowerSum
+DescEx="<p>Calculates the sum of all the digits of integer <var>N</var> in base <var>Base</var> where each digit is raised to the power <var>Exponent</var>. The returned value has the same sign as <var>N</var>.</p><p>If the result is too large to be represented as an <var>Int64</var> value then an <var>EOverflow</var> exception is raised.</p><p>Bases up to 255 are supported. If <var>Base</var> &lt;= 2 then an <var>EArgumentException</var> exception is raised.</p>"
+Kind=routine
+Units=SysUtils,Math
+Depends=PowNZN
+SeeAlso=DigitSum,DigitSumBase
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=661.dat
 DelphiXE=Y
 Delphi12A=Y
