Add overloads of Median function to Maths category
Added overloads of Median function that calculates the median values of
Integer and Double arrays.

Added meta data for the Median functions to maths.ini.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1871,3 +1871,29 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=664.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[Median_Double]
+DisplayName="Median (Double overload)"
+DescEx="<p>Returns the median of an array of floating point values.</p><p>Raises an <var>EArgumentException</var> exception if the array is empty.</p>"
+Kind=routine
+Units=SysUtils,Generics.Collections
+SeeAlso=Median_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=665.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[Median_Integer]
+DisplayName="Median (Integer overload)"
+DescEx="<p>Returns the median of an array of integer values.</p><p>Raises an <var>EArgumentException</var> exception if the array is empty.</p>"
+Kind=routine
+Units=SysUtils,Generics.Collections
+SeeAlso=Median_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=666.dat
+DelphiXE=Y
+Delphi12A=Y
