Add 8 new routines to Maths category
Added new MinMaxOfArray (Double & Integer overloads), RescaleRange
(Double & Integer overloads), NormaliseByWeight (Double & Cardinal
overloads) and RangeOf (Double & Integer overloads) routines to the
Mathematics category.

Added source code .dat files for all the new routines.

Added meta data for all 8 new routines to maths.ini.

--- a/collection/maths.ini
+++ b/collection/maths.ini
@@ -1897,3 +1897,106 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=666.dat
 DelphiXE=Y
 Delphi12A=Y
+
+[MinMaxOfArray_Double]
+DisplayName="MinMaxOfArray (Double overload)"
+DescEx="<p>Finds the minimum and maximum values contained in the non-empty array, <var>A</var>, of double precision floating point values. <var>MinValue</var> and <var>MaxValue</var> are set to the minimum and maximum values, respectively.</p><p><var>EArgumentException</var> is raised if <var>A</var> is empty.</p>"
+Kind=routine
+Units=SysUtils
+SeeAlso=MinMaxOfArray_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=669.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[MinMaxOfArray_Integer]
+DisplayName="MinMaxOfArray (Integer overload)"
+DescEx="<p>Finds the minimum and maximum values contained in the non-empty <var>Integer</var> array <var>A</var>. <var>MinValue</var> and <var>MaxValue</var> are set to the minimum and maximum values, respectively.</p><p><var>EArgumentException</var> is raised if <var>A</var> is empty.</p>"
+Kind=routine
+Units=SysUtils
+SeeAlso=MinMaxOfArray_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=670.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[RescaleRange_Double]
+DisplayName="RescaleRange (Double overload)"
+DescEx="<p>Rescales the elements of array <var>A</var> containing a range of <var>Double</var> values so that each value of <var>A</var> is mapped to a value in the range [0..1].</p><p>An array of the same size as <var>A</var> is returned where each element contains the rescaled value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty and not all elements may be the same value. <var>EArgumentException</var> is raised if either condition is not met.</p>"
+Kind=routine
+Units=SysUtils,Types,Math
+Depends=MinMaxOfArray_Double
+SeeAlso=NormaliseByWeight_Double,RescaleRange_Integer
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=667.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[RescaleRange_Integer]
+DisplayName="RescaleRange (Integer overload)"
+DescEx="<p>Rescales the elements of array <var>A</var> containing a range of <var>Integer</var> values so that each value of <var>A</var> is mapped to a value in the range [0..1].</p><p>An array of the same size as <var>A</var> is returned where each element contains the rescaled value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty and not all elements may be the same value. <var>EArgumentException</var> is raised if either condition is not met.</p>"
+Kind=routine
+Units=SysUtils,Types
+Depends=MinMaxOfArray_Integer
+SeeAlso=NormaliseByWeight_Cardinal,RescaleRange_Double
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=674.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[NormaliseByWeight_Double]
+DisplayName="NormaliseByWeight (Double overload)"
+DescEx="<p>Normalises the values in floating point array <var>A</var> so that each value of <var>A</var> is mapped to a value in the range [0..1], where the total of all the values is 1. The relative weights of the values are preserved.</p><p>An array of the same size as <var>A</var> is returned where each element contains the normalised value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty. All elements of <var>A</var> must be &gt;= 0, with at least one element &gt; 0. <var>EArgumentException</var> is raised if these conditions are not met.</p>"
+Kind=routine
+Units=SysUtils,Types,Math
+SeeAlso=RescaleRange_Double,WeightedArithMean_Double,NormaliseByWeight_Cardinal
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=668.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[NormaliseByWeight_Cardinal]
+DisplayName="NormaliseByWeight (Cardinal overload)"
+DescEx="<p>Normalises the values in unsigned integer array <var>A</var> so that each value of <var>A</var> is mapped to a value in the range [0..1], where the total of all the values is 1. The relative weights of the values are preserved.</p><p>An array of the same size as <var>A</var> is returned where each element contains the normalised value of the corresponding element of <var>A</var>.</p><p><var>A</var> must not be empty and must have at least one non-zero element. <var>EArgumentException</var> is raised if these conditions are not met.</p>"
+Kind=routine
+Units=SysUtils,Types
+SeeAlso=RescaleRange_Integer,WeightedArithMean_Integer,NormaliseByWeight_Double
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=671.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[RangeOf_Double]
+DisplayName="RangeOf (Double overload)"
+DescEx="<p>Returns the length of the range of values in non-empty <var>Double</var> array <var>A</var>.</p><p><var>EArgumentException</var> is raised if <var>A</var> is empty.</p>"
+Kind=routine
+Units=Math
+Depends=MinMaxOfArray_Double
+SeeAlso=RangeOf_Integer,RescaleRange_Double
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=672.dat
+DelphiXE=Y
+Delphi12A=Y
+
+[RangeOf_Integer]
+DisplayName="RangeOf (Integer overload)"
+DescEx="<p>Returns the length of the range of values in non-empty <var>Integer</var> array <var>A</var>.</p><p><var>EArgumentException</var> is raised if <var>A</var> is empty.</p>"
+Kind=routine
+Depends=MinMaxOfArray_Integer
+SeeAlso=RangeOf_Double,RescaleRange_Integer
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Maths"
+Snip=673.dat
+DelphiXE=Y
+Delphi12A=Y
